Fixed presskit link.

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                     <div class="col-lg-2 col-md-2 col-sm-6 col-xs-12 footer-col">
                         <h6 class="heading7">Company</h6>
                         <ul class="footer-ul">
-                            <li><a href="/presskit.html" target="_blank"> About / Press Kit</a></li>
+                            <li><a href="presskit.html" target="_blank"> About / Press Kit</a></li>
                             <li><a href="https://blog.prolificidea.com" target="_blank"> Blog</a></li>
                         </ul>
                         <h6 class="heading7">Projects</h6>
