--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         ga('send', 'pageview');
     </script>
     
-    <!-- Hotjar Tracking Code for http://www.prolificidea.com -->
+    <!-- Hotjar Tracking Code for http://prolificidea.com -->
     <script>
         (function(h,o,t,j,a,r){
             h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
