--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                         <h6 class="heading7">Company</h6>
                         <ul class="footer-ul">
                             <li><a href="presskit.html" target="_blank"> About / Press Kit</a></li>
-                            <li><a href="https://blog.prolificidea.com" target="_blank"> Blog</a></li>
+                            <li><a href="http://blog.prolificidea.com" target="_blank"> Blog</a></li>
                         </ul>
                         <h6 class="heading7">Projects</h6>
                         <ul class="footer-ul">
