--- a/presskit.html
+++ b/presskit.html
@@ -108,6 +108,7 @@
                 <h4>Website</h4>
                 <ol>
                     <li><a href="http://prolificidea.com">prolificidea.com</a></li>
+                    <li><a href="http://blog.prolificidea.com">blog.prolificidea.com</a></li>
                 </ol>
                 <h4>Press / Business Contact</h4>
                 <ol>
@@ -170,7 +171,7 @@
                     <h6 class="heading7">Company</h6>
                     <ul class="footer-ul">
                         <li><a href="/presskit.html" target="_blank"> About / Press Kit</a></li>
-                        <li><a href="https://blog.prolificidea.com" target="_blank"> Blog</a></li>
+                        <li><a href="http://blog.prolificidea.com" target="_blank"> Blog</a></li>
                     </ul>
                     <h6 class="heading7">Projects</h6>
                     <ul class="footer-ul">
