Added Viszen link.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Growing Ideas">
     <meta name="author" content="Prolific Idea">
-    <meta name="keyword" content="Prolific, Prolific Idea, Idea, Ideas, Hivemind, Noia, getHivemind, Innovation, Software, Technology">
+    <meta name="keyword" content="Prolific, Prolific Idea, Idea, Ideas, Hivemind, Viszen, getHivemind, Innovation, Software, Technology">
 
     <!-- Chrome, Firefox OS and Opera -->
     <meta name="theme-color" content="#14A2EF">
@@ -146,7 +146,7 @@
                     <div id="secondaryCarousel" class="carousel" data-ride="carousel">
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img src="assets/images/noia-showcase-overview.png" alt="Noia">
+                                <a href="https://www.viszen.tech" target="_blank"><img src="assets/images/viszen-showcase-overview.png" alt="Noia"></a>
                             </div>
                         </div>
                     </div>
